
public abstract class TypeClean {
}
